--- a/about.html
+++ b/about.html
@@ -322,7 +322,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> Antwone Lee Yang </b></p>
             <br>
-            <p>Antwone is a twenty four year old portrait and fashion photographer based in Minneapolis. He is currently pursuing a MS in Physicians Assistant Studies.<br>He hopes to work with National Geographic, Nike, GQ, & Motor Trend.<br><ul><li>If he were a superhero, he would be able to breathe underwater.</li><li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li><li>He enjoys walking around the lakes, cruising on his penny board, reading in a hammock, and creating in After Effects.</li></ul>Ask him about his favorite movie next time you see him and have him take your photo and he’ll be your best friend.</p>
+            <p>Antwone is a twenty four year old portrait and fashion photographer based in Minneapolis. He is currently pursuing a MS in Physicians Assistant Studies.<br>He hopes to work with National Geographic, Nike, GQ, & Motor Trend.<br><ul><li>If he were a superhero, he would be able to breathe underwater.</li><li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li><li>He enjoys walking around the lakes, cruising on his penny board, reading in a hammock, and creating in After Effects.</li><li>His most traumatic experience includes - you'll have to buy him dinner first.</li></ul>Ask him about his favorite movie next time you see him and have him take your photo and he’ll be your best friend.</p>
             <br>
             <br>
             <p>He is currently planning a roadtrip to Seattle. Want <a href="/contact.html"><u>in?</u></a></p>
