--- a/works.html
+++ b/works.html
@@ -381,11 +381,20 @@
 <article class="post photo  index" id="113348561091">
     <div class="content">
         <img src="zennys.jpg" alt="penn" onContextMenu="return false;"/>
+        <!--img src="frye.jpg" alt="free" onContextMenu="return false;"/--> 
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+
+<article class="post photo  index" id="113348561091">
+    <div class="content">
         <img src="frye.jpg" alt="free" onContextMenu="return false;"/> 
     </div>
     <div class="content" style="display:none;">    
     </div>
 </article>
+                
 </main>
 <!-- footer -->
 <footer class="index">
