--- a/index.html
+++ b/index.html
@@ -287,6 +287,16 @@
     </div>
 </article>
 
+<article class="post photo  index">
+    <div class="content">
+        <img src="amadeus.jpg" alt="Amadeus" onContextMenu="return false;"/>
+        <img src="andpen.jpg" alt="Andpen" onContextMenu="return false;"/>
+        <img src="andchair.jpg" alt="chair" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
 <!-- post meta -->
 </main>
 <!-- footer -->
