--- a/contact.html
+++ b/contact.html
@@ -320,7 +320,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> CONTACT </b></p>
             <br>
-            <p><i>ALYSTUDIO_MN@gmail.com</i></p>
+            <p><i>ALYSTUDIO.MN@gmail.com</i></p>
         </div>
         <div class="content" style="display:none;">     
         </div>
