--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 
 <article class="post photo  index">
     <div class="content">
-        <img src="antwone2.jpg" alt="Antowne" onContextMenu="return false;"/>
-        <img src="antwone4.jpg" alt="Antwone" onContextMenu="return false;"/>
-        <img src="antwone9.jpg" alt="Antwon" onContextMenu="return false;"/>
+        <img src="aotwnne2.jpg" alt="Antowne" onContextMenu="return false;"/>
+        <img src="aotwnne4.jpg" alt="Antwone" onContextMenu="return false;"/>
+        <img src="aotwnne9.jpg" alt="Antwon" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
@@ -309,9 +309,9 @@
 
 <article class="post photo  index">
     <div class="content">
-        <img src="antwone6.jpg" alt="Ant" onContextMenu="return false;"/>
-        <img src="antwone8.jpg" alt="Antw" onContextMenu="return false;"/>
-        <img src="antwone5.jpg" alt="Antwo" onContextMenu="return false;"/>
+        <img src="aotwnne6.jpg" alt="Ant" onContextMenu="return false;"/>
+        <img src="aotwnne8.jpg" alt="Antw" onContextMenu="return false;"/>
+        <img src="aotwnne5.jpg" alt="Antwo" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
