--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <script src="//static.tumblr.com/s4jebcl/7Ienjuwzs/jquery-1.11.2.min.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'UA-154490996-1');
-</script>    
+</script> 
         
 <!--google fonts-->
         <link href='https://fonts.googleapis.com/css?family=Montserrat:600' rel='stylesheet' type='text/css'>
