--- a/index.html
+++ b/index.html
@@ -254,6 +254,15 @@
                 <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
+  
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154490996-1');
+</script> 
 </header>
 
 <!-- main -->
