--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <div class="content">
         <img src="Andu2.jpg" alt="ANDI" onContextMenu="return false;"/>
         <img src="Andu3.jpg" alt="Andy" onContextMenu="return false;"/>
-        <img src="Andu4.jpg" alt="Andei" onContextMenu="return false;"/>
+        <img src="Aondy.jpg" alt="Andei" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
