--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
     </div>
     <ul id="pages">
                 <li><a href="/about.html">About</a></li> 
-                <li><a href="/personal.html">Personal</a></li>            
+                <li><a href="/personal.html">Personal</a></li> 
+                <li><a href="/Contactus.html">Contact Us</a></li>            
     </ul>
     <div class="clearFix"></div>
   
