--- a/Contactus.html
+++ b/Contactus.html
@@ -54,57 +54,9 @@
     <h2>Checkout form</h2>
     <p class="lead">Have questions or want to work with us? Enter your contact information below, and we'll get back to you. </p>
   </div>
-
-  <div class="row g-3">
-    <div class="col-md-5 col-lg-4 order-md-last">
-      <h4 class="d-flex justify-content-between align-items-center mb-3">
-        <span class="text-muted">Your cart</span>
-        <span class="badge bg-secondary rounded-pill">3</span>
-      </h4>
-      <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-sm">
-          <div>
-            <h6 class="my-0">Product name</h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <span class="text-muted">$12</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-sm">
-          <div>
-            <h6 class="my-0">Second product</h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <span class="text-muted">$8</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-sm">
-          <div>
-            <h6 class="my-0">Third item</h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <span class="text-muted">$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between bg-light">
-          <div class="text-success">
-            <h6 class="my-0">Promo code</h6>
-            <small>EXAMPLECODE</small>
-          </div>
-          <span class="text-success">−$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span>Total (USD)</span>
-          <strong>$20</strong>
-        </li>
-      </ul>
-
-      <form class="card p-2">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Promo code">
-          <button type="submit" class="btn btn-secondary">Redeem</button>
-        </div>
-      </form>
-    </div>
+  
     <div class="col-md-7 col-lg-8">
-      <h4 class="mb-3">Billing address</h4>
+      <h4 class="mb-3">Contact Us</h4>
       <form class="needs-validation" novalidate>
         <div class="row g-3">
           <div class="col-sm-6">
@@ -127,10 +79,9 @@
             <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
             <input type="email" class="form-control" id="email" placeholder="you@example.com">
             <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
+              Please enter a valid email address for inquiries.
             </div>
           </div>
-          
           
            <div class="col-12">
               <label for="phone" class="form-label">Phone <span class="text-muted">(Optional)</span></label>
@@ -150,35 +101,17 @@
           </div>
 
           <div class="col-md-5">
-            <label for="country" class="form-label">Country</label>
-            <select class="form-select" id="country" required>
-              <option value="">Choose...</option>
-              <option>United States</option>
+            <label for="country" class="form-label">How Did You Hear About Us?</label>
+            <input type="text" class="form-control" id="discovery" >
             </select>
-            <div class="invalid-feedback">
-              Please select a valid country.
             </div>
           </div>
 
           <div class="col-md-4">
-            <label for="state" class="form-label">State</label>
-            <select class="form-select" id="state" required>
-              <option value="">Choose...</option>
-              <option>California</option>
-            </select>
-            <div class="invalid-feedback">
-              Please provide a valid state.
+            <label for="state" class="form-label">Messsage</label>
+            <input type="text" class="form-control" id="message" >
             </div>
           </div>
-
-          <div class="col-md-3">
-            <label for="zip" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="zip" placeholder="" required>
-            <div class="invalid-feedback">
-              Zip code required.
-            </div>
-          </div>
-        </div>
 
         <hr class="my-4">
 
