--- a/Contactus.html
+++ b/Contactus.html
@@ -51,7 +51,7 @@
 <div class="container">
   <div class="py-5 text-center">
     <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-    <h2>Checkout form</h2>
+    <h2>Contact Us</h2>
     <p class="lead">Have questions or want to work with us? Enter your contact information below, and we'll get back to you. </p>
   </div>
   
