--- a/personal.html
+++ b/personal.html
@@ -316,10 +316,16 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> March 30th, 2020 </b></p>
+            <p style="font-size:110%;"><b> July 13th, 2020 </b></p>
             <br>
-            <p><i>ESSENTAL</i></p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ofa9rH2-qjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p><i>REAL</i></p>
+            <br>
+            <br>
+            <p>A inner dialogue</p>
+            <br>
+            "How are you? No, how are you really doing?"
+            "How are you really feeling?"
+            "What do you really want?"
         </div>
         <div class="content" style="display:none;">     
         </div>
