--- a/personal.html
+++ b/personal.html
@@ -316,16 +316,15 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 13th, 2020 </b></p>
+            <p style="font-size:110%;"><b> July 13th, 2020 9:34PM </b></p>
             <br>
             <p><i>REAL</i></p>
             <br>
-            <br>
-            <p>A inner dialogue</p>
+            <p>My heart has been burdened as of late. I am exhausted of being real. Being real is really hard.</p>
             <br>
             "How are you? No, how are you really doing?"
             "How are you really feeling?"
-            "What do you really want?"
+            "What do you really want?" <br><br> I don't think there will ever be a single person who will really understand the person that I am. I am tired of being misunderstood.
         </div>
         <div class="content" style="display:none;">     
         </div>
