--- a/index.html
+++ b/index.html
@@ -263,64 +263,13 @@
 </script> 
 </header>
 
-<!-- main -->
-<main id="main" class=" index">
-    <article class="post photo  index" id="113348657626"> 
-        <div class="content">
-            <img src="as1.jpg" alt="as1" onContextMenu="return false;"/>
-            <img src="00.jpg" alt="00" onContextMenu="return false;"/>  
-            <img src="01.jpg" alt="01" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-<!-- post meta -->
-<article class="post photo  index" id="113348505116">
-    <div class="content">
-        <img src="02.jpg" alt="02" onContextMenu="return false;"/>
-        <img src="03.jpg" alt="Sample" onContextMenu="return false;"/>
-        <img src="05.jpg" alt="post" onContextMenu="return false;"/>    
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-        <img src="06.jpg" alt="ANDU" onContextMenu="return false;"/>
-        <img src="zooashn.jpg" alt="penash" onContextMenu="return false;"/>
-        <img src="zooandi2.jpg" alt="zoon" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="Andu2.jpg" alt="ANDI" onContextMenu="return false;"/>
-        <img src="Andu3.jpg" alt="Andy" onContextMenu="return false;"/>
-        <img src="Andi23.jpg" alt="Andi23" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="amadeus.jpg" alt="Amadeus" onContextMenu="return false;"/>
-        <img src="andpen.jpg" alt="Andpen" onContextMenu="return false;"/>
-        <img src="andchair.jpg" alt="chair" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
 
 <!-- post meta -->
 </main>
 <!-- footer -->
 <footer class="index">
     <div class="left">
-    <div id="copyright">ALY STUDIO 2020</div>
+    <div id="copyright">i am tired of being real. I am tired of being misunderstood</div>
     </div>
     <div class="clearFix"></div>
 </footer>
