--- a/personal.html
+++ b/personal.html
@@ -318,13 +318,11 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 13th, 2020 9:34PM </b></p>
             <br>
-            <p><i>REAL</i></p>
+            <p><i>REAL(ly hurting)</i></p>
             <br>
-            <p>My heart has been burdened as of late. I am exhausted of being real. Being real is really hard.</p>
+            <p>My heart has been burdened as of late. </p>
             <br>
-            "How are you? No, how are you really doing?"
-            "How are you really feeling?"
-            "What do you really want?" <br><br> I don't think there will ever be a single person who will really understand the person that I am. I am tired of being misunderstood.
+            <br><br>
         </div>
         <div class="content" style="display:none;">     
         </div>
