--- a/index.html
+++ b/index.html
@@ -254,6 +254,20 @@
     </ul>
     <div class="clearFix"></div>
   
+  
+  <main id="main" class=" index">
+    <article class="post photo  index" id=""> 
+        <div class="content">
+          <br>
+            <p>Growing pains.</p>
+            <br>
+            <br>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+</main>
+  
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
