--- a/personal.html
+++ b/personal.html
@@ -317,9 +317,9 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 13th, 2020 9:34PM </b></p>
             <br>
-            <p><i>REAL(ly hurting)</i></p>
+            <p><i>REAL</i></p>
             <br>
-            <p>My heart has been burdened as of late. </p>
+            <p> </p>
             <br>
             <br><br>
         </div>
