--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <!-- footer -->
 <footer class="index">
     <div class="left">
-    <div id="copyright">i am tired of being real. I am tired of being misunderstood</div>
+    <div id="copyright">ALY STUDIO 2020</div>
     </div>
     <div class="clearFix"></div>
 </footer>
