--- a/personal.html
+++ b/personal.html
@@ -317,7 +317,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 13th, 2020 9:34PM </b></p>
             <br>
-            <p><i>REAL</i></p>
+            <p><i>Growing pains</i></p>
             <br>
             <p> </p>
             <br>
