--- a/personal.html
+++ b/personal.html
@@ -315,9 +315,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 13th, 2020 9:34PM </b></p>
+            <p style="font-size:110%;"><b> July 14th, 2020 4:58PM </b></p>
             <br>
-            <p><i>Growing pains</i></p>
+            <p><i>so unsatisfied</i></p>
             <br>
             <p> </p>
             <br>
