--- a/personal.html
+++ b/personal.html
@@ -317,7 +317,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 14th, 2020 4:58PM </b></p>
             <br>
-            <p><i>so unsatisfied</i></p>
+            <p><i>open up</i></p>
             <br>
             <p> </p>
             <br>
