--- a/personal.html
+++ b/personal.html
@@ -315,11 +315,21 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 14th, 2020 4:58PM </b></p>
+            <p style="font-size:110%;"><b> July 14th, 2020 6:25PM </b></p>
             <br>
-            <p><i>open up</i></p>
+            <p><i>an inner dialogue</i></p>
             <br>
-            <p> </p>
+            <p>When your biggest desire is to be known and to know in return, it's hard to NOT give all of yourself away.<br>
+               like i do this thing where I'll begin to give all my thoughts away and all my worries and eventually my story<br>
+               and it gets so weird so quick. I start to become entitled and start projecting onto others and then the rift grows<br>
+               and i'm finding myself passive aggressive.<br><br>
+               antwone slow down. enjoy the process. these things take time. let them open up on their own terms & in their own way."<br>
+               <br>
+              the temptation is to hide and to run and to be fake but keep being real. just because you're not reciprocated doesn't mean <br>
+                you won't be tomorrow. keep being consistent. don't change. be real. be real. be real. say what you really want to say.<br>
+                say how you're really doing. say how you really feel. 
+                                                                                          
+            </p>
             <br>
             <br><br>
         </div>
