--- a/personal.html
+++ b/personal.html
@@ -323,11 +323,15 @@ footer .left{
                like i do this thing where I'll begin to give all my thoughts away and all my worries and eventually my story<br>
                and it gets so weird so quick. I start to become entitled and start projecting onto others and then the rift grows<br>
                and i'm finding myself passive aggressive.<br><br>
-               antwone slow down. enjoy the process. these things take time. let them open up on their own terms & in their own way."<br>
+               antwone slow down. enjoy the process. these things take time. let them open up on their own terms & in their own way.<br>
                <br>
               the temptation is to hide and to run and to be fake but keep being real. just because you're not reciprocated doesn't mean <br>
                 you won't be tomorrow. keep being consistent. don't change. be real. be real. be real. say what you really want to say.<br>
-                say how you're really doing. say how you really feel. 
+                say how you're really doing. say how you really feel. don't run. don't self-sabotage. it is worth the wait.<br>
+                <br>
+                i am learning that it is not always about me. just listen. Listen with the intent to hear, not to respond.<br>
+                you don't need to fix anything. just be broken. be be heard when it's your time to speak.<br><br><br>
+                           
                                                                                           
             </p>
             <br>
