--- a/personal.html
+++ b/personal.html
@@ -331,6 +331,7 @@ footer .left{
                 <br>
                 i am learning that it is not always about me. just listen. Listen with the intent to hear, not to respond.<br>
                 you don't need to fix anything. just be broken. be be heard when it's your time to speak.<br><br><br>
+                it's okay not to be okay.
                            
                                                                                           
             </p>
