--- a/personal.html
+++ b/personal.html
@@ -329,7 +329,7 @@ footer .left{
                 you won't be tomorrow. keep being consistent. don't change. be real. be real. be real. say what you really want to say.<br>
                 say how you're really doing. say how you really feel. don't run. don't self-sabotage. it is worth the wait.<br>
                 <br>
-                i am learning that it is not always about me. just listen. Listen with the intent to hear, not to respond.<br>
+                i am learning that it is not always about me. just listen. listen with the intent to hear, not to respond.<br>
                 you don't need to fix anything. just be broken. be be heard when it's your time to speak.<br><br><br>
                 it's okay not to be okay.
                            
