--- a/personal.html
+++ b/personal.html
@@ -330,8 +330,8 @@ footer .left{
                 say how you're really doing. say how you really feel. don't run. don't self-sabotage. it is worth the wait.<br>
                 <br>
                 i am learning that it is not always about me. just listen. listen with the intent to hear, not to respond.<br>
-                you don't need to fix anything. just be broken. be be heard when it's your time to speak.<br><br><br>
-                it's okay not to be okay.
+                you don't need to fix anything. just be broken. be be heard when it's your time to speak.<br>
+                it's okay not to be okay. you can be seen being vulernable. you don't have to hide.
                            
                                                                                           
             </p>
