--- a/personal.html
+++ b/personal.html
@@ -335,6 +335,17 @@ footer .left{
         <div class="content" style="display:none;">     
         </div>
     </article>
+</main>
+    
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154490996-1');
+</script> 
+</header>
 
 <footer class="index">
     <div class="left">
