--- a/personal.html
+++ b/personal.html
@@ -315,17 +315,15 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 14th, 2020 6:25PM </b></p>
+            <p style="font-size:110%;"><b> July 15th, 2020 6:10AM </b></p>
             <br>
-            <p><i>an inner dialogue</i></p>
-            <br><br>antwone slow down, enjoy the process. let it happen. these things take time. let them open up on their own terms <br>
-            and in their own way.<br>
-            <p>the temptation is to hide and to run and to be fake but keep being real. just because you're not reciprocated doesn't mean <br>
-                you won't be tomorrow. keep being consistent. don't change. be real. be real. be real. say what you really want to say.<br>
-                say how you're really doing. say how you really feel. don't run. don't self-sabotage. it is worth the wait.<br>
-                i am learning that it is not always about me. just listen. listen with the intent to hear, not to respond.<br>
-                you don't need to fix anything. just be broken.<br>
-                it's okay not to be okay. you can be seen being vulernable. you don't have to hide when things aren't good.
+            <p><i>refined</i></p>
+            <br><br>i am continually amazed that i can go to sleep feeling one way but wake up feeling another.<br>
+                    i am becoming refined. i am released. i am forgiven. i am seen. i am heard. i am loved.<br>
+                    out with the old, in with the new. victory is coming. i am a champion. the best is yet to come. <br>
+                    what would i be without grace. to be pursued first. to be seen first. I am advocated for.<br>
+                    i am fought for. abounding in love. His comfort is mines. i am being made new.<br>
+                    where i am weak, He is strong. i am right where i need to be.
                            
                                                                                           
             </p>
