--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#222222"/>
+<meta name="color:Font color" content="#FFFFFF"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <meta name="if:Show social icons" content="1"/>
@@ -32,7 +32,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#222222;
+            color:#000000;
             text-decoration:none;
         }
         a:hover{
@@ -44,7 +44,7 @@
         }
         body{
             background-color:#ffffff;
-            color:#222222;
+            color:#000000;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
@@ -115,7 +115,7 @@
             margin-bottom:1em;
             padding-right:0.1em;
             line-height:0em;
-            border-right:2px solid #222222;
+            border-right:2px solid #FFFFFF;
         }
         #pages li:last-child{
             padding-right:0;
