--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             clear:both;
         }
         body{
-            background-color:#ffffff;
+            background-color:#000000;
             color:#000000;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
