--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#000000;
+            color:#FFFFFF;
             text-decoration:none;
         }
         a:hover{
