--- a/personal.html
+++ b/personal.html
@@ -61,7 +61,8 @@ footer.permalink{
 main.index{
     top:25vh;
     left:7vw;
-    height:54vh;
+    right:7vw;
+    height:60vh;
     position:absolute;
     white-space:nowrap;
 }
