--- a/index.html
+++ b/index.html
@@ -253,19 +253,16 @@
     </ul>
     <div class="clearFix"></div>
   
-  
-  <main id="main" class=" index">
-    <article class="post photo  index" id=""> 
+<!-- main -->
+<main id="main" class=" index">
+    <article class="post photo  index"> 
         <div class="content">
-          <br>
-            <p></p>
-            <br>
-            <br>
+            <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
-</main>
+<!-- post meta -->
   
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <script>
