--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="shortcut icon" href="/favicon.ico"
 <meta name="description" content="ALY STUDIO" />
-<title>ALY STUDIO</title>
+<title>ALY</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
@@ -10,9 +10,6 @@
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <meta name="if:Show social icons" content="1"/>
-<meta name="text:Facebook ID" content=""/>
-<meta name="text:Twitter ID" content=""/>
-<meta name="text:Instagram ID" content=""/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <script src="//static.tumblr.com/s4jebcl/7Ienjuwzs/jquery-1.11.2.min.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
