--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
 <main id="main" class=" index">
     <article class="post photo  index"> 
         <div class="content">
-            <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>
+            <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
+	    <img src="9239.jpg" alt="STUDIO" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
