--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         main.index{
             top:20vh;
             left:7vw;
-            height:54vh;
+	    right:7vw;
+            height:64vh;
             position:absolute;
             white-space:nowrap;
         }
