--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
         <div class="content">
             <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
 	    <img src="9239.jpg" alt="STUDIO" onContextMenu="return false;"/>
+	    <IMG SRC="9241.jpg" alt=2020" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
