--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <ul id="pages">
                 <li><a href="/about.html">About</a></li> 
                 <li><a href="/works.html">Works</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/contactus.html">Contact</a></li>
                 <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
@@ -317,21 +317,6 @@
     </div>
 </article>
 
-<article class="post photo  index">
-    <div class="content">
-        <img src="aotwnne2.jpg" alt="Antowne" onContextMenu="return false;"/>
-        <img src="aotwnne4.jpg" alt="Antwone" onContextMenu="return false;"/>
-        <img src="aotwnne3.jpg" alt="Antwon" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="aotwnne6.jpg" alt="Ant" onContextMenu="return false;"/>
-        <img src="aotwnne8.jpg" alt="Antw" onContextMenu="return false;"/>
-        <img src="aotwnne9.jpg" alt="Antwo" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
