--- a/personal.html
+++ b/personal.html
@@ -309,7 +309,7 @@ footer .left{
     <ul id="pages">
                 <li><a href="/about.html">About</a></li> 
                 <li><a href="/works.html">Works</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/contactus.html">Contact</a></li>
                 <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
@@ -318,10 +318,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <p style="font-size:110%;"><b> March 30th, 2020 </b></p>
+            <p style="font-size:110%;"><b> July 18th, 2020 </b></p>
             <br>
-            <p><i>ESSENTAL</i></p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ofa9rH2-qjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p><i></i></p>
         </div>
         <div class="content" style="display:none;">     
         </div>
