--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="as1.jpg" alt="as1" onContextMenu="return false;"/>
-            <img src="00.jpg" alt="00" onContextMenu="return false;"/>  
+            <img src="as1.jpg" alt="ALY" onContextMenu="return false;"/>
+            <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>  
             <img src="01.jpg" alt="01" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
