--- a/works.html
+++ b/works.html
@@ -67,8 +67,9 @@
         main.index{
             top:25vh;
             left:7vw;
+ 	    right:7vw;
             height:54vh;
-            position:absolute;
+	    position:absolute;
             white-space:nowrap;
         }
         main.permalink{
