--- a/works.html
+++ b/works.html
@@ -386,6 +386,11 @@
     <div class="content" style="display:none;">    
     </div>
 </article>
+
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
                 
 </main>
 <!-- footer -->
