--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <title>Contact ALY</title>
 
     <link rel="canonical" href="https://v5.getbootstrap.com/docs/5.0/examples/checkout/">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     
 
@@ -260,11 +261,11 @@
   </div>
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017–2020 Company Name</p>
+    <p class="mb-1">&copy; ALY STUDIO 2020</p>
     <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
+      <li class="list-inline-item"><a href="#">About</a></li>
+      <li class="list-inline-item"><a href="#">Works</a></li>
+      <li class="list-inline-item"><a href="#">Personal</a></li>
     </ul>
   </footer>
 </div>
