--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             clear:both;
         }
         body{
-            background-color:#ffffff;
-            color:#222222;
+            background-color:#000000;
+            color:#000000;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
@@ -115,7 +115,7 @@
             margin-bottom:1em;
             padding-right:0.1em;
             line-height:0em;
-            border-right:2px solid #222222;
+            border-right:2px solid #000000;
         }
         #pages li:last-child{
             padding-right:0;
