--- a/personal.html
+++ b/personal.html
@@ -315,11 +315,11 @@ footer .left{
 </header>
 
 <main id="main" class=" index">
-    <article class="post photo  index" id="113348657626"> 
+    <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 18th, 2020 </b></p>
+            <p style="font-size:110%;"><b> July 18th, 2020 10:51PM</b></p>
             <br>
-            <p><i></i></p>
+            <p><i>extended times of isolation</i></p><br>
         </div>
         <div class="content" style="display:none;">     
         </div>
