--- a/personal.html
+++ b/personal.html
@@ -319,7 +319,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 18th, 2020 10:51PM</b></p>
             <br>
-            <p><i>extended times of isolation</i></p><br>
+            <p><i>extended times of isolation</i></p><br>find him.
         </div>
         <div class="content" style="display:none;">     
         </div>
