--- a/contact.html
+++ b/contact.html
@@ -320,14 +320,18 @@ footer .left{
   method="POST"
 >
   <label>
+    Your name:
+    <input type="text" name="_replyto">
+  </label><br>
+  <label>
     Your email:
     <input type="text" name="_replyto">
-  </label>
+  </label><br>
   <label>
     Your message:
     <textarea name="message"></textarea>
-  </label>
-  <button type="submit">Send</button>
+  </label><br>
+  <button type="submit">Submit</button>
 </form>
 
 </div>
