--- a/contact.html
+++ b/contact.html
@@ -321,7 +321,7 @@ footer .left{
 >
   <label>
     Your name:
-    <input type="text" name="_replyto">
+    <input type="text" >
   </label><br>
   <label>
     Your email:
