--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" href="/favicon.ico"
+<link rel="shortcut icon" href="/favicon.jpg"
 <meta name="description" content="ALY STUDIO" />
 <title>ALY STUDIO</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
@@ -250,7 +250,6 @@
     <ul id="pages">
                 <li><a href="/about.html">About</a></li> 
                 <li><a href="/works.html">Works</a></li>
-                <li><a href="/contact.html">Contact</a></li>
                 <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
@@ -312,26 +311,6 @@
         <img src="amadeus.jpg" alt="Amadeus" onContextMenu="return false;"/>
         <img src="andpen.jpg" alt="Andpen" onContextMenu="return false;"/>
         <img src="andchair.jpg" alt="chair" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="aotwnne2.jpg" alt="Antowne" onContextMenu="return false;"/>
-        <img src="aotwnne4.jpg" alt="Antwone" onContextMenu="return false;"/>
-        <img src="aotwnne3.jpg" alt="Antwon" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="aotwnne6.jpg" alt="Ant" onContextMenu="return false;"/>
-        <img src="aotwnne8.jpg" alt="Antw" onContextMenu="return false;"/>
-        <img src="aotwnne9.jpg" alt="Antwo" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
