--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="as1.jpg" alt="as1" onContextMenu="return false;"/>
-            <img src="00.jpg" alt="00" onContextMenu="return false;"/>  
-            <img src="01.jpg" alt="01" onContextMenu="return false;"/>
+            <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
+            <img src="9239.jpg" alt="STUDIO" onContextMenu="return false;"/>  
+            <img src="9240.jpg" alt="2020" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -278,41 +278,11 @@
 <!-- post meta -->
 <article class="post photo  index" id="113348505116">
     <div class="content">
-        <img src="02.jpg" alt="02" onContextMenu="return false;"/>
-        <img src="03.jpg" alt="Sample" onContextMenu="return false;"/>
-        <img src="05.jpg" alt="post" onContextMenu="return false;"/>    
+        <img src="9241.jpg" alt="A" onContextMenu="return false;"/>
+        <img src="05.jpg" alt="B" onContextMenu="return false;"/>
+        <img src="06.jpg" alt="C" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
-    </div>
-</article>
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-        <img src="06.jpg" alt="ANDU" onContextMenu="return false;"/>
-        <img src="zooashn.jpg" alt="penash" onContextMenu="return false;"/>
-        <img src="zooandi2.jpg" alt="zoon" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="Andu2.jpg" alt="ANDI" onContextMenu="return false;"/>
-        <img src="Andu3.jpg" alt="Andy" onContextMenu="return false;"/>
-        <img src="Andi23.jpg" alt="Andi23" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="amadeus.jpg" alt="Amadeus" onContextMenu="return false;"/>
-        <img src="andpen.jpg" alt="Andpen" onContextMenu="return false;"/>
-        <img src="andchair.jpg" alt="chair" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
     </div>
 </article>
 
