--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="content">
             <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
             <img src="9239.jpg" alt="STUDIO" onContextMenu="return false;"/>  
-            <img src="9240.jpg" alt="2020" onContextMenu="return false;"/>
+            <img src="Andu2.jpg" alt="2020" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -278,7 +278,7 @@
 <!-- post meta -->
 <article class="post photo  index" id="113348505116">
     <div class="content">
-        <img src="9241.jpg" alt="A" onContextMenu="return false;"/>
+        <img src="Andi23.jpg" alt="A" onContextMenu="return false;"/>
         <img src="05.jpg" alt="B" onContextMenu="return false;"/>
         <img src="06.jpg" alt="C" onContextMenu="return false;"/>    
     </div>
