--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
             <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
-            <img src="9239.jpg" alt="STUDIO" onContextMenu="return false;"/>  
+            <img src="9239.jpg" alt="Studio" onContextMenu="return false;"/>  
             <img src="Andu2.jpg" alt="2020" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
