--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" href="/favicon.jpg"
+<link rel="shortcut icon" href="/favicon.ico"
 <meta name="description" content="ALY STUDIO" />
 <title>ALY STUDIO</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
@@ -250,6 +250,7 @@
     <ul id="pages">
                 <li><a href="/about.html">About</a></li> 
                 <li><a href="/works.html">Works</a></li>
+                <li><a href="/contact.html">Contact</a></li>
                 <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
@@ -268,9 +269,9 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="9234.jpg" alt="ALY" onContextMenu="return false;"/>
-            <img src="Andu2.jpg" alt="2020" onContextMenu="return false;"/>
-            <img src="Andi23.jpg" alt="Studio" onContextMenu="return false;"/>  
+            <img src="as1.jpg" alt="as1" onContextMenu="return false;"/>
+            <img src="00.jpg" alt="00" onContextMenu="return false;"/>  
+            <img src="01.jpg" alt="01" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -278,11 +279,61 @@
 <!-- post meta -->
 <article class="post photo  index" id="113348505116">
     <div class="content">
-        <img src="9239.jpg" alt="A" onContextMenu="return false;"/>  
-        <img src="06.jpg" alt="C" onContextMenu="return false;"/> 
-        <img src="05.jpg" alt="D" onContextMenu="return false;"/>
+        <img src="02.jpg" alt="02" onContextMenu="return false;"/>
+        <img src="03.jpg" alt="Sample" onContextMenu="return false;"/>
+        <img src="05.jpg" alt="post" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
+    </div>
+</article>
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+        <img src="06.jpg" alt="ANDU" onContextMenu="return false;"/>
+        <img src="zooashn.jpg" alt="penash" onContextMenu="return false;"/>
+        <img src="zooandi2.jpg" alt="zoon" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="Andu2.jpg" alt="ANDI" onContextMenu="return false;"/>
+        <img src="Andu3.jpg" alt="Andy" onContextMenu="return false;"/>
+        <img src="Andi23.jpg" alt="Andi23" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="amadeus.jpg" alt="Amadeus" onContextMenu="return false;"/>
+        <img src="andpen.jpg" alt="Andpen" onContextMenu="return false;"/>
+        <img src="andchair.jpg" alt="chair" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="aotwnne2.jpg" alt="Antowne" onContextMenu="return false;"/>
+        <img src="aotwnne4.jpg" alt="Antwone" onContextMenu="return false;"/>
+        <img src="aotwnne3.jpg" alt="Antwon" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="aotwnne6.jpg" alt="Ant" onContextMenu="return false;"/>
+        <img src="aotwnne8.jpg" alt="Antw" onContextMenu="return false;"/>
+        <img src="aotwnne9.jpg" alt="Antwo" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
     </div>
 </article>
 
