--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="as1.jpg" alt="as1" onContextMenu="return false;"/>
-            <img src="00.jpg" alt="00" onContextMenu="return false;"/>  
-            <img src="01.jpg" alt="01" onContextMenu="return false;"/>
+            <img src="as1.jpg" alt="ALY" onContextMenu="return false;"/>
+            <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>  
+            <img src="9238.jpg" alt="2020" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -279,9 +279,9 @@
 <!-- post meta -->
 <article class="post photo  index" id="113348505116">
     <div class="content">
-        <img src="02.jpg" alt="02" onContextMenu="return false;"/>
-        <img src="03.jpg" alt="Sample" onContextMenu="return false;"/>
-        <img src="05.jpg" alt="post" onContextMenu="return false;"/>    
+        <img src="02.jpg" alt="A" onContextMenu="return false;"/>
+        <img src="03.jpg" alt="B" onContextMenu="return false;"/>
+        <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
     </div>
