--- a/personal.html
+++ b/personal.html
@@ -314,9 +314,10 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 18th, 2020 10:51PM</b></p>
+            <p style="font-size:110%;"><b> July 22nd, 2020 9:24PM</b></p>
             <br>
-            <p><i>extended times of isolation</i></p><br>find him.
+            <p><i>how do you know?</i></p><br>today i met up with a few friends and caught up on life. I am reminded that I am not alone, that I do not have to have everything together.<br>
+            
         </div>
         <div class="content" style="display:none;">     
         </div>
