--- a/personal.html
+++ b/personal.html
@@ -316,8 +316,13 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 22nd, 2020 9:24PM</b></p>
             <br>
-            <p><i>how do you know?</i></p><br>today i met up with a few friends and caught up on life. I am reminded that I am not alone, that I do not have to have everything together.<br>
-            
+            <p><i>how do you know?</i></p><br>things have been difficult.<br>today I realized I had a hand tremor in my right hand, and it scared me.<br>i wish you could have seen how scared I was<br>
+            I struggle with slowing down and being present and being still. I am so focused on "what's next" that I find it hard to just be still and be in the present moment. <br>
+            I am constantly chasing this fantasy of being a doctor someday and I think it is ruining me. My final is on Friday and I cannot wait to finally slow down and think.<br>
+            how am I doing? What hurts? What is causing me so much grief? Why can't I be still? What am I chasing? Why do these things even matter? Who am I? <br>
+            I am unraveling. <br>I had a thought today, "if you were given a magical button that once pressed, would fix everything, would you?"<br>
+            I don't know. Why is it so easy to be caught up in the same routines? to run to the same comforts when I become anxious.<br>
+            make me new. 
         </div>
         <div class="content" style="display:none;">     
         </div>
