--- a/personal.html
+++ b/personal.html
@@ -314,15 +314,21 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 22nd, 2020 9:24PM</b></p>
+            <p style="font-size:110%;"><b> July 22nd, 2020 9:39PM</b></p>
             <br>
-            <p><i>how do you know?</i></p><br>things have been difficult.<br>today I realized I had a hand tremor in my right hand, and it scared me.<br>i wish you could have seen how scared I was<br>
+            <p><i>i don't want to be a doctor anymore.</i></p><br>things have been difficult.<br>today I realized I had a hand tremor in my right hand, and it scared me.<br>i wish you could have seen how scared I was<br>
             I struggle with slowing down and being present and being still. I am so focused on "what's next" that I find it hard to just be still and be in the present moment. <br>
             I am constantly chasing this fantasy of being a doctor someday and I think it is ruining me. My final is on Friday and I cannot wait to finally slow down and think.<br>
             how am I doing? What hurts? What is causing me so much grief? Why can't I be still? What am I chasing? Why do these things even matter? Who am I? <br>
             I am unraveling. <br>I had a thought today, "if you were given a magical button that once pressed, would fix everything, would you?"<br>
             I don't know. Why is it so easy to be caught up in the same routines? to run to the same comforts when I become anxious.<br>
-            make me new. 
+            make me new. <br>
+            I don't know who reads these but these memos are really just for me, to give me the space to slow down and breathe and to think about me<br>
+            I don't want to be a doctor anymore. I don't know what I want. Is that okay? <br><br>
+            I need the courage to not chase what the world tells me is success. <br> help me to not seek the approval of others.<br>
+            help me to believe that I will be okay. you are okay, antwone. you can be still, you can do nothing.<br>
+            i am overwhelmed. i am scared. <br> i am chasing direction. where are you? where am i to go?<br>
+            what am i to do?
         </div>
         <div class="content" style="display:none;">     
         </div>
