--- a/personal.html
+++ b/personal.html
@@ -316,12 +316,10 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 22nd, 2020 9:39PM</b></p>
             <br>
-            <p><i>i don't want to be a doctor anymore.</i></p><br>things have been difficult.<br>
-            I don't want to be a doctor anymore. I am scared to say that. to verablize that. I don't know what I want. Is that okay? <br><br>
-            I need the courage to not chase what the world tells me is success. <br> help me to not seek the approval of others.<br>
-            help me to believe that I will be okay. you are okay, antwone. you can be still, you can do nothing. you don't have to be a doctor.<br>
-            i am overwhelmed. i am scared. <br> i am chasing direction. where are you? where am i to go?<br>
-            what am i to do?
+            <p><i>how to get by</i></p><br>perhaps my biggest fear is failure. is that why i don't say what i really want to say?<br>
+            "I don't want to be a doctor anymore?"<br>
+            who would understand the why. "why antwone?" <br><br> it doesn't feel right. that's it. i don't know why.<br>
+            
         </div>
         <div class="content" style="display:none;">     
         </div>
