--- a/personal.html
+++ b/personal.html
@@ -316,7 +316,8 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 22nd, 2020 10:07PM</b></p>
             <br>
-            <p><i></i></p><br>
+            <p><i></i></p><br>i realized this week i do NOT want to be a doctor. <br> i want to pursue my dreams of having my own studio one day<br>
+            antwone, set your sails. embrace the journey. stop comparing yourself to others. be real with what you want. calm seas never made a skilled sailor.
             
         </div>
         <div class="content" style="display:none;">     
