--- a/personal.html
+++ b/personal.html
@@ -314,10 +314,11 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 22nd, 2020 10:07PM</b></p>
+            <p style="font-size:110%;"><b> July 22nd, 2020 10:17PM</b></p>
             <br>
-            <p><i></i></p><br>i realized this week i do NOT want to be a doctor. <br> i want to pursue my dreams of having my own studio one day<br>
-            antwone, set your sails. embrace the journey. stop comparing yourself to others. be real with what you want. calm seas never made a skilled sailor.
+            <p><i></i></p><br>there is an art to the way that we unravel & open up. to the way we mend & bounce back. <br>
+            just because my story sucks and my upbringing was difficult, does NOT disqualify me. you are worthy antwone.<br>
+            you are allowed this. you can pursue this. you can have this.
             
         </div>
         <div class="content" style="display:none;">     
