--- a/personal.html
+++ b/personal.html
@@ -314,11 +314,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 22nd, 2020 10:17PM</b></p>
+            <p style="font-size:110%;"><b> July 23nd, 2020 10:42PM</b></p>
             <br>
-            <p><i></i></p><br>there is an art to the way that we unravel & open up. to the way we mend & bounce back. <br>
-            just because my story sucks and my upbringing was difficult, does NOT disqualify me. you are worthy antwone.<br>
-            you are allowed this. you can pursue this. you can have this.
+            <p><i>glad to be back</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
