--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="as1.jpg" alt="ALY" onContextMenu="return false;"/>
+            <img src="0279.jpg" alt="ALY" onContextMenu="return false;"/>
             <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>  
             <img src="9239.jpg" alt="2020" onContextMenu="return false;"/>
         </div>
