--- a/personal.html
+++ b/personal.html
@@ -314,9 +314,11 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 23nd, 2020 10:42PM</b></p>
+            <p style="font-size:110%;"><b> July 28th, 2020 6:45AM</b></p>
             <br>
-            <p><i>glad to be back</i></p><br>
+            <p><i>"He can, without anything other than Himself, meet & overflow the deepest demands of our total nature, mysterious & deep as that nature is. God must do everything for us. Out part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict the motions of our expanding hearts. The opposite is true. We can well afford to make God our All, to concentrate, to sacrifice the many for the One."
+
+1 Corinthians 7:24 "So, brothers, in whatever condition each was called, there let him remain with God."</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
