--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 <main id="main" class=" index">
     <article class="post photo  index" id="113348657626"> 
         <div class="content">
-            <img src="0279.jpg" alt="ALY" onContextMenu="return false;"/>
-            <img src="9234.jpg" alt="STUDIO" onContextMenu="return false;"/>  
-            <img src="0007.jpg" alt="2020" onContextMenu="return false;"/>
+            <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img src="0350.jpg" alt="L" onContextMenu="return false;"/>  
+            <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -278,7 +278,7 @@
 <!-- post meta -->
 <article class="post photo  index" id="113348505116">
     <div class="content">
-        <img src="02.jpg" alt="A" onContextMenu="return false;"/>
+	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
         <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
         <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
     </div>
@@ -288,9 +288,9 @@
 <!-- post meta -->
 <article class="post photo  index">
     <div class="content">
-        <img src="06.jpg" alt="ANDU" onContextMenu="return false;"/>
-        <img src="zooashn.jpg" alt="penash" onContextMenu="return false;"/>
-        <img src="Andu2.jpg" alt="ANDI" onContextMenu="return false;"/>
+        <img src="06.jpg" alt="G" onContextMenu="return false;"/>
+        <img src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
+        <img src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
@@ -298,8 +298,9 @@
 
 <article class="post photo  index">
     <div class="content">
-        <img src="Andu3.jpg" alt="Andy" onContextMenu="return false;"/>
-        <img src="Andi23.jpg" alt="Andi23" onContextMenu="return false;"/>
+        <img src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
+	<img src="02.jpg" alt="D" onContextMenu="return false;"/>
+        <img src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
